Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43308

REG [4->5] Windows: Executing a modal dialog using QDialog::exec() launched from timer/event while moving parent window/dialog, freezes mouse buttons

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.4.1
    • 5.4.0
    • GUI: Window management
    • None
    • Windows 8.1 (on Linux and Mac the bug doesn't happen)
    • 58fc02241a96b18a1062f2495d40dcdc047a7d5c (qtbase/5.4, 7.1.2015, 5.4.1)

    Description

      When moving or resizing a window or dialog, and a QMessageBox (or for that matter any other modal dialog) is opened (e.g. via a timer or other event), then the mouse button events won't be noticed anymore, also by the other applications or the OS itself.
      This only affects the Windows version, and as far as I could test it, all Qt versions.
      The attached application is an example application that was slightly modified: a timer was set-up that pops open a QMessageBox every 5 seconds.

      Attachments

        1. configdialog.zip
          25 kB
        2. qtbug43308.zip
          2 kB
        For Gerrit Dashboard: QTBUG-43308
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            floatingwoods Marc Freese
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes